	* Added a method to the abstract community application controller to get an instance of the user gateway
	* Added an abstract view and changed all views to use this new abstract view
	* Added a new section in the TS configuration for common settings, for now contains a setting how dates should be rendered

2008-09-30 Frank Naegler  <typo3@naegler.net>

	* adding GroupInformationWidget

2008-09-29 Ingo Renner  <ingo@typo3.org>

	* !!! changed the way the configuration for community applications is build, their names now start with lower case letters like anything else, too
	* made the profile image rendering configurable through TS
	* The application manager now returns initialized applications
	* added a dispatching mechanism to the abstract community application controller, it executes in the following priorities: widget, specific action, default action
	* renamed the widgets' getId() method into getName() to make it more consistent with the according community application method
	* refactored the existing user profile widgets to use a new abstract community application widget class as parent
	* added basic scaffolding for the friends birthdaylist widget

2008-09-29 Frank Naegler  <typo3@naegler.net>

	* move function isFriendOfCurrentlyLoggedInUser from tx_community_model_UserGateway to tx_community_AccessManager

2008-09-22 Frank Naegler  <typo3@naegler.net>

	* added member invite function for group editing settings
	* added new function isFriendOfCurrentlyLoggedInUser to the tx_community_model_UserGateway
	* bugfix: initialize groupGateway in tx_community_controller_ListGroupsApplication

2008-09-21 Ingo Renner  <ingo@typo3.org>

	* added a way to exclude community application from being listed in the community plugin's flexform
	* made the application manager available in global scope when the community plugin is executed
	* removed includes of the application manager as it is loaded with the community FE plugin