@@ -6,6 +6,9 @@
 	* Added a method to the abstract community application controller to get an instance of the user gateway
 	* Added an abstract view and changed all views to use this new abstract view
 	* Added a new section in the TS configuration for common settings, for now contains a setting how dates should be rendered
+	* Added getter and setter for the birthday property in the user model
+	* Added a date viewhelper, that turns unix timestamps into human readable dates
+	* Added the user profile friend birthday list widget
 
 2008-09-30 Frank Naegler  <typo3@naegler.net>
 
